--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>0895330959178</li>
+                <li>dandicik@gmail.com</li>
               </ul>
             </div>
 
