--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">RANDI</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.facebook.com/ramadhandi21?locale=id_ID" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/ramadhandi21/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/rama-dhandi-6a63a3187/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
