--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>RAMADHANDI</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Kreator Vedeo , Freelancer, Photographer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -100,18 +100,16 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Tanggal Kelahiran:</strong> <span>30 November 2000</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>WhatsApp:</strong> <span>0895330959178</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Kota Tinggal:</strong> <span>Cikarang,Bekasi,JawaBarat,Indonesia</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Usia:</strong> <span>23</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dandicik@gmail.com</span></li>
                 </ul>
               </div>
             </div>
@@ -253,9 +251,9 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>RAMADHANDI</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Kreator Vedeo yang inovatif dan berorientasi pada tenggat waktu dengan pengalaman lebih dari 5 tahun merancang dan mengembangkan materi kreator digital/vedeo yang berpusat pada pengguna, mulai dari konsep awal hingga hasil akhir yang sempurna.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
+                <li>Cikarang, Bekasi</li>
                 <li>0895330959178</li>
                 <li>dandicik@gmail.com</li>
               </ul>
