--- a/index.html
+++ b/index.html
@@ -108,14 +108,13 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Usia:</strong> <span>23</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Usia:</strong> <span>23 Tahun</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dandicik@gmail.com</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Menciptakan Kreasi Vedeo/Konten yang menginspirasi, mendidik, dan menghibur, sambil terus meningkatkan keterampilan penyuntingan dan kreativitas dalam rangka memengaruhi positif audiens dan industri secara luas.
             </p>
           </div>
         </div>
@@ -129,7 +128,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Dunia konten seringkali bergerak dengan cepat, dan Anda mungkin diberi tenggat waktu yang ketat untuk menghasilkan konten berkualitas tinggi. Ini dapat menimbulkan stres dan tekanan, terutama jika Anda harus memenuhi tenggat waktu yang ketat secara konsisten.</p>
         </div>
 
         <div class="row no-gutters">
@@ -243,7 +242,8 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Saya Pernah Melalui berbagai pengalaman dari jalur pendidikan otodidak internet maupun di pekerjaan saya sehari hari.
+          berikut beberapa backround/Latar belakang pendidikan serta pengalaman saya</p>
         </div>
 
         <div class="row">
@@ -261,10 +261,10 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>SMK Garuda Nusantara</h4>
+              <h5>2017 - 2019</h5>
+              <p><em>Teknik Kendaraan Ringan</em></p>
+              <p>Dapat memahami berbagai mesin mobil berbahan bakar disel serta memahami kinerja pada mesin mobil konvensional</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
