--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>RAMADHANDI</h1>
-      <p>I'm <span class="typed" data-typed-items="Kreator Vedeo , Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Kreator Vedeo , Enterpreneur, Konten Writing"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -84,7 +84,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Di Usia yang Produktif saat ini Saya tentunya akan mencoba dan belajar banyak hal terutama di era digitalisasi ini dengan adanya ide kreasi menarik yang melimpah akan saya usahakan dengan sebaikmungkin
+          untuk menjadi pengembanagan diri saya sendiri dan menjadi inspirasi khalayak banyak dengan kreasi yang saya ciptakan</p>
         </div>
 
         <div class="row">
@@ -92,10 +93,9 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Kreator Digital &amp; Enterpreneur.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Banyak Tantangan serta resiko yang sering saya jumpai, tetapi dengan adanya hal tersebut bukan berarti memutuskan semangat saya dan tetap akan membuat keputusan dengan bijak.
             </p>
             <div class="row">
               <div class="col-lg-6">
