--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Dunia konten seringkali bergerak dengan cepat, dan Anda mungkin diberi tenggat waktu yang ketat untuk menghasilkan konten berkualitas tinggi. Ini dapat menimbulkan stres dan tekanan, terutama jika Anda harus memenuhi tenggat waktu yang ketat secara konsisten.</p>
+          <p>Dunia konten seringkali bergerak dengan cepat, dan mungkin diberi tenggat waktu yang ketat untuk menghasilkan konten berkualitas. Ini dapat menimbulkan tekanan, terutama Anda harus memenuhi tenggat waktu yang ketat secara konsisten
+            serta melakukanya dengan disiplin.</p>
         </div>
 
         <div class="row no-gutters">
