--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>Facts.</h2>
           <p>Dunia konten seringkali bergerak dengan cepat,terutama di algoritma dan mungkin diberi tenggat waktu yang ketat untuk menghasilkan konten berkualitas. Ini dapat menimbulkan tekanan, terutama Anda harus memenuhi tenggat waktu yang ketat secara konsisten
-            serta melakukanya dengan disiplin. </p>
+            serta melakukan dengan disiplin. </p>
         </div>
 
         <div class="row no-gutters">
