--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Tanggal Kelahiran:</strong> <span>30 November 2000</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Tanggal Kelahiran:</strong> <span>30 Nopember 2000</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>WhatsApp:</strong> <span>0895330959178</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Kota Tinggal:</strong> <span>Cikarang,Bekasi,JawaBarat,Indonesia</span></li>
@@ -114,7 +114,7 @@
               </div>
             </div>
             <p>
-              Menciptakan Kreasi Vedeo/Konten yang menginspirasi, mendidik, dan menghibur, sambil terus meningkatkan keterampilan penyuntingan dan kreativitas dalam rangka memengaruhi positif audiens dan industri secara luas.
+              Membuat Kreasi Vedeo/Konten yang menginspirasi, mendidik, dan menghibur, sambil terus meningkatkan keterampilan penyuntingan dan kreativitas dalam rangka memengaruhi positif audiens dan industri secara luas.
             </p>
           </div>
         </div>
@@ -128,7 +128,7 @@
 
         <div class="section-title">
           <h2>Facts.</h2>
-          <p>Dunia konten seringkali bergerak dengan cepat,terutama di algoritma dan mungkin diberi tenggat waktu yang ketat untuk menghasilkan konten berkualitas. Ini dapat menimbulkan tekanan, terutama Anda harus memenuhi tenggat waktu yang ketat secara konsisten
+          <p>Dunia Media seringkali bergerak dengan cepat,terutama di algoritma dan mungkin diberi tenggat waktu yang ketat untuk menghasilkan konten berkualitas. Ini dapat menimbulkan tekanan, terutama Anda harus memenuhi tenggat waktu yang ketat secara konsisten
             serta melakukan dengan disiplin. </p>
         </div>
 
