--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <div class="section-title">
           <h2>Facts.</h2>
-          <p>Dunia Media seringkali bergerak dengan cepat,terutama di algoritma dan mungkin diberi tenggat waktu yang ketat untuk menghasilkan konten berkualitas. Ini dapat menimbulkan tekanan, terutama Anda harus memenuhi tenggat waktu yang ketat secara konsisten
+          <p>Dunia Media seringkali bergerak dengan cepat,terutama di algoritma dan mungkin diberi waktu yang ketat untuk menghasilkan konten berkualitas. Ini dapat menimbulkan tekanan, terutama Anda harus memenuhi tenggat waktu yang ketat secara konsisten
             serta melakukan dengan disiplin. </p>
         </div>
 
