--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Public Speaking/CMS <i class="val">80%</i></span>
+              <span class="skill">Public Speaking. <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
